--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,7 +1,20 @@
-.row {
+.login-page .row , .card-row {
   margin: 15px 0 15px 0 !important;
 }
 
 footer {
   font-size: x-small !important;
 } 
+
+.dashboard-input {
+  padding: 0 !important;
+}
+
+.super-admin-dashboard-button {
+  margin: 0 12px;
+}
+
+.small cardTitle.title{
+    font-size: 14px !important;
+    color: red;
+}
